tests/ui/pattern/usefulness/issue-119493-type-error-ice.stderr
error[E0412]: cannot find type `NonExistent` in this scope
  --> $DIR/issue-119493-type-error-ice.rs:5:16
   |
LL |     struct Foo(NonExistent);
   |                ^^^^^^^^^^^ not found in this scope

error[E0412]: cannot find type `NonExistent` in this scope
  --> $DIR/issue-119493-type-error-ice.rs:5:16
   |
LL |     struct Foo(NonExistent);
   |                ^^^^^^^^^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
LL |     struct Foo<NonExistent>(NonExistent);
   |               +++++++++++++

error[E0658]: `impl Trait` in type aliases is unstable
  --> $DIR/issue-119493-type-error-ice.rs:9:14
   |
LL |     type U = impl Copy;
   |              ^^^^^^^^^
   |
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information
   = help: add `#![feature(type_alias_impl_trait)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0412, E0658.
For more information about an error, try `rustc --explain E0412`.
